ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-html-app-ingress 
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: myapp.jisan.com 
    http:
      paths:
      - path: / 
        pathType: Prefix 
        backend:
          service:
            name: my-html-app-service 
            port:
              number: 80
